Fixed the overflow hover issues I was having

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     color: #242f40;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 15px;
     line-height: 1.5;
 }
@@ -100,7 +100,8 @@ h3 {
   }
   .project-description p:hover {
       overflow: visible;
-      background-color: #fff;
+      background-color: #FF5A5F;
+      max-height: none;
   }
 .item-details h3 + p {
     font-style: italic;
